# rubian

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml
app/: Cargo.toml
app/src/: error_template.rs  file_info.rs  files.rs  lib.rs
frontend/: Cargo.toml
frontend/src/: lib.rs
rubian_core/: Cargo.toml
rubian_core/src/: lib.rs  table.rs
rubian_core/src/elf/: mod.rs
rubian_gui/: Cargo.toml
rubian_gui/src/: file_info.rs  lib.rs  main.rs
rubian_gui/src/elf/: mod.rs
rubian_tauri/: Cargo.toml  tauri.conf.json
rubian_tauri/src/: main.rs
rubilib/: Cargo.toml
rubilib/src/: binary.rs  blob.rs  lib.rs  table.rs
rubilib/src/elf/: mod.rs
rubilib/src/hex/: mod.rs
rubilib/src/pe/: mod.rs
server/src/: fileserv.rs  main.rs
src/: blob.rs  lib.rs  main.rs
src/elf/: mod.rs  symbols.rs
style/: main.scss
