[package]
name = "rubian"
version = "0.1.0"
edition = "2021"
authors = ["Mark Beinker <mwb@quantlink.de>"]
description = "Binary analysis tool"
license = "MIT"
repository = "https://github.com/xemwebe/rubian"
readme = "README.md"
keywords = ["binary"]
categories = ["command-line-utilities", "parsing"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
strum = { version = "0.25", features = ["derive"] }
thiserror = "1.0"

