[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
web-sys = { version = "0.3", features = ["FileList", "File"] }
server_fn = { version = "0.7", features = ["multipart"] }
rubilib = { path = "../rubilib" }
once_cell = "1.20"
log = "0.4"
serde = { version = "1", features = ["derive"] }

http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_axum"]
