[package]
name = "rubian_tauri"
version = "0.1.0"
description = "rubian - a binary analysis tool"
authors = ["Mark Beinker"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/xemwebe/rubian"
edition = "2021"
rust-version = "1.79"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["api-all"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0.82"
thiserror = "1.0.59"
console_log = "1.0.0"
log = "0.4.21"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
